Spring changelog
(since 85.0: "!" prefix indicate backward compability broke)
(numbers in brackets normally mean the mantis ticket ID)


-- 95.0 ---------------------------------------------------------

Misc:
 - add map border rendering
 - allow lua ais to be selected with the menu
 ! new datadir structure: http://springrts.com/phpbb/viewtopic.php?f=12&t=30044
 ! removed "mods" from archive scandirs
 - do not switch camera-mode on countdown
 - speedup grass rendering
 - reduce target-lost CAI timeout from 8 to 2 seconds
 - colorized stdout
 - show LuaMemUsage in /debug view
 ! log error when an image format is used which doesn't work on all platforms
     current supported image formats are:
     PNG, JPG, TGA, DDS, BMP
 - make calls to script->{Start, Stop}Moving more consistent: only run them
     when a unit transitions from zero to non-zero speed or vice versa, and no
     longer do so during in-place rotations --> animations should no longer be
     interrupted / reset
     THIS APPLIES TO ALL UNIT TYPES (AIR AND GROUND), TEST YOUR SCRIPTS
 ! remove TA-specific code in CobInstance::Create
    (this changes the argument value to COB's SetMaxReloadTime for
    units equipped with BeamLasers and / or more than one weapon)
 - {Laser, Emg}Projectile: disable all collision-testing when ttl <= 0
     these projectile types could exceed their range due to fadeout
     and only removed themselves (deleteMe=true) when intensity or
     length reached 0, so without disabling coldet (checkCol=false)
     range-exploits were possible
 - block impulses from applying to 'static' features
 - LoadingMT: add a runtime check that should detect incompatibilities
 - disable ARB shaders with Intel/Mesa drivers (can be overridden by setting ForceEnableIntelShaderSupport=1)
 - apply UnitDef::myGravity to ground units (if non-zero)
     NOTE: myGravity acts as a map-gravity MULTIPLIER for aircraft; it REPLACES map gravity for land-based units